intel/bench_214_work/extr_.linuxdriversmediav4l2-corev4l2-dv-timings.c_v4l2_detect_cvt_with_main/log.txt
bench_214_work/extr_.linuxdriversmediav4l2-corev4l2-dv-timings.c_v4l2_detect_cvt_with_main/extr_.linuxdriversmediav4l2-corev4l2-dv-timings.c_v4l2_detect_cvt_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
1 error generated.
HLS FPGA Parse FAILED.
